# ITP---escaperoom

./: .gitignore  Brainstorm.txt  README.md  Sprint 3 Aufgaben.txt
.github/workflows/: discord_notification.yml
EscapeRoom/: CMakeLists.txt
EscapeRoom/EscapeRoom/: CMakeLists.txt
EscapeRoom/EscapeRoom/assets/highscore/: highscore.txt
EscapeRoom/EscapeRoom/assets/intro/: cRiddle.txt  intro.txt
EscapeRoom/EscapeRoom/assets/outro/: outro.txt
EscapeRoom/EscapeRoom/assets/textures/DMNMT/: DocMadRiddle.txt  DocRiddle.txt
EscapeRoom/EscapeRoom/assets/textures/ENG_1/: EngRiddle.txt  MadEngRiddle.txt
EscapeRoom/EscapeRoom/assets/textures/INFRA/: InfraRiddle.txt  MadInfraRiddle.txt
EscapeRoom/EscapeRoom/assets/textures/KOKO/: KOKORiddle.txt  MadKOKORiddle.txt
EscapeRoom/EscapeRoom/assets/textures/MACS_1/: MACRiddle.txt  MadMACRiddle.txt
EscapeRoom/EscapeRoom/assets/textures/PROZD/: cRiddle.txt  madRichterReply.txt
EscapeRoom/EscapeRoom/assets/textures/Pictures/Datenmanagement/: DocRiddle.txt  MadDocRiddle.txt
EscapeRoom/EscapeRoom/assets/textures/Pictures/Mathematik für Computer Science 1/: MACRiddle.txt  MadMACRiddle.txt
EscapeRoom/EscapeRoom/assets/textures/Pictures/Prozedurale Sprachen Labor/: cRiddle.txt
EscapeRoom/EscapeRoom/assets/textures/WEB_1/: MadWEBRiddle.txt  WEBRiddle.txt
EscapeRoom/EscapeRoom/documentation/: DeploymentManual.docx  GesamtaufwandStunden.docx  Gesamtaufwand_Stunden.docx  Manual.docx  ProjectOverview.docx  ProjectOverview.txt  Sprint_Review_Protocol_Gruppe_13.xlsx
EscapeRoom/EscapeRoom/include/: AudioManager.hpp  Button.hpp  CharacterSelection.hpp  DocRoom.hpp  EngRoom.hpp  FinalRoom.hpp  Game.hpp  GameLoop.hpp  GameOver.hpp  Highscore.hpp  InfraRoom.hpp  Intro.hpp  Inventory.hpp  Item.hpp  KokoRoom.hpp  MainMenu.hpp  MathRoom.hpp  Outro.hpp  Player.hpp  ProzdRoom.hpp  Riddle.hpp  Room.hpp  Scene.hpp  SetHighscore.hpp  Timer.hpp  Visuals.hpp  WebRoom.hpp
EscapeRoom/EscapeRoom/src/: AudioManager.cpp  Button.cpp  CharacterSelection.cpp  DocRoom.cpp  EngRoom.cpp  FinalRoom.cpp  Game.cpp  GameOver.cpp  Highscore.cpp  InfraRoom.cpp  Intro.cpp  KokoRoom.cpp  MainMenu.cpp  MathRoom.cpp  Outro.cpp  ProzdRoom.cpp  Riddle.cpp  Room.cpp  SetHighscore.cpp  Timer.cpp  Visuals.cpp  WebRoom.cpp  main.cpp
